--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://V3lekzane.github.io/my-app  ",
+    "homepage": "https://V3lekzane.github.io/my-app",
     "name": "shop-project",
     "version": "0.1.0",
     "private": true,
@@ -26,7 +26,7 @@
     },
     "scripts": {
         "predeploy": "npm run build",
-        "deploy": "gh-pages -b master -d build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build"
     },
