--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://V3lekzane.github.io/full-project",
+    "homepage": "https://V3lekzane.github.io/project",
     "name": "shop-project",
     "version": "0.1.0",
     "private": true,
